# caesar-search-python

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  context7.json  pyproject.toml
.github/workflows/: ci.yml  release.yml  spec-sync.yml
spec/: openapi-public.json
src/caesar_search/: __init__.py  _client.py  _exceptions.py
src/caesar_search/models/: __init__.py  _models.py
tests/: conftest.py  test_client.py  test_files.py  test_models.py
tests/contract/: test_contract.py
