[project]
name = "caesar-search"
version = "0.5.0"
description = "Official Python SDK for the Caesar search API — web search with provenance, built for agents."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Caesar" }]
keywords = ["search", "web-search", "agents", "caesar"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/caesar-data/caesar-search-python"
Repository = "https://github.com/caesar-data/caesar-search-python"
Issues = "https://github.com/caesar-data/caesar-search-python/issues"
Changelog = "https://github.com/caesar-data/caesar-search-python/releases"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "mypy>=1.13",
  "ruff>=0.8",
  "datamodel-code-generator[http]>=0.63",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caesar_search"]

[tool.ruff]
line-length = 110
target-version = "py310"
# Generated code is owned by the generator, not the formatter.
exclude = ["src/caesar_search/models/_models.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
files = ["src/caesar_search", "tests"]
exclude = ["src/caesar_search/models/_models\\.py"]

[[tool.mypy.overrides]]
module = "caesar_search.models._models"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.datamodel-codegen]
input = "spec/openapi-public.json"
input-file-type = "openapi"
output = "src/caesar_search/models/_models.py"
output-model-type = "pydantic_v2.BaseModel"
target-python-version = "3.10"
use-schema-description = true
use-field-description = true
field-constraints = true
use-double-quotes = true
disable-timestamp = true
allow-extra-fields = true
formatters = ["black", "isort"]
